# DSA_labs

courses/Mate_roman/: CMakeLists.txt  main.c  pasta.c  pasta.h
courses/Roman_Mate/: CMakeLists.txt
labs/lab_01/: CMakeLists.txt  array_functions.c  array_functions.h  main.c
labs/lab_02/: CMakeLists.txt  array_functions..c  array_functions..h  main.c  utils.c  utils.h
labs/lab_03/: CMakeLists.txt  Student_functions.c  Student_functions.h  library.h  main.c  student.c  student.h
labs/lab_05/char_stack/: CMakeLists.txt  char_stack_functions.c  char_stack_functions.h  main.c
labs/lab_05/int_stack/: CMakeLists.txt  int_stack_functions.c  int_stack_functions.h  main.c
labs/lab_05/verem/: CMakeLists.txt  constants.h  main.c  verem.c  verem.h
labs/lab_06/: CMakeLists.txt  constans.h  main.c  simple_queue.c  simple_queue.h
labs/lab_06/Queue/: CMakeLists.txt  queuef.c  queuef.h
labs/lab_07/: CMakeLists.txt  glasess_circular_queue.c  glasess_circular_queue.h  main.c
labs/lab_07/Glass_circular/: CMakeLists.txt  glass_circular_queue.c  glass_circular_queue.h  main.c
labs/lab_09/double_list/: CMakeLists.txt
labs/lab_10/binariskeresofa/: binarisfa.c  binarisfa.h  main.c
labs/lab_10/double_list/: CMakeLists.txt  double_list_functions.c
labs/lab_10/operations-with-binary-search-tree/: CMakeLists.txt
labs/lab_10/operations-with-binary-search-tree-feladat/: CMakeLists.txt  main.c
labs/lab_10/operations-with-binary-tree/: main.c
labs/lab_11/: CMakeLists.txt  library.c  library.h  main.c
labs/teszt/: CMakeLists.txt  library.c
(+10 files in other folders)
